Bug 1462227 - Enable hiding system titlebar on Deepin desktop, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D4212